# xlsx-util

./: .gitignore  CMakeLists.txt  binding.gyp  index.js  jest-config.json  license.md  package-lock.json  package.json  readme.md
.circleci/: config.yml
cpp/: AsyncError.cpp  AsyncError.h  AsyncReader.cpp  AsyncReader.h  CMakeLists.txt  NapiAsync.cpp  Sheet.cpp  Sheet.h  Val.cpp  Val.h  XlsxReaderFunctions.h  checkLibrary.cc  checkLibrary.old.cc  getData.cpp  getSheetNames.cpp  init.cpp  main.cpp  normalizeString.h  numtolet.h  old.getData.cpp  old.getSheetNames.cpp  parse-node.cpp  readXlsxAsync.cpp  readXlsxAsync.h  replaceAll.h  replaceAllNapi.cpp  replaceAllNapi.h  str.h  toLower.h  toLowerNapi.cpp  toLowerNapi.h  toss.h  xlsx.cpp  xlsx.h
cpp/ValParseTest/ValParseTest/: main.cpp
cpp/ValParseTest/ValParseTest.xcodeproj/: project.pbxproj
cpp/ValParseTest/ValParseTest.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
cpp/ValParseTest/ValParseTest.xcodeproj/project.xcworkspace/xcuserdata/mjb.xcuserdatad/: UserInterfaceState.xcuserstate
cpp/ValParseTest/ValParseTest.xcodeproj/xcuserdata/mjb.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
cpp/ValParseTest/ValParseTest.xcodeproj/xcuserdata/mjb.xcuserdatad/xcschemes/: xcschememanagement.plist
cpp/scratch/numtolet/numtolet/: main.cpp
cpp/scratch/numtolet/numtolet.xcodeproj/: project.pbxproj
cpp/scratch/numtolet/numtolet.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
cpp/scratch/numtolet/numtolet.xcodeproj/project.xcworkspace/xcuserdata/mjb.xcuserdatad/: UserInterfaceState.xcuserstate
cpp/scratch/numtolet/numtolet.xcodeproj/xcuserdata/mjb.xcuserdatad/xcschemes/: xcschememanagement.plist
gyp/: addon.cc  index.js
src/: index.js  main.cpp
sublime/: xlsx-utils.sublime-workspace
tests/: basic.disabled.js  basic.test.js  basic.test.xlsx  get-data.test.js  get-sheet-names.disabled.js  get-sheet-names.test.js  pascal.xlsx  read-file.test.js  sci-bug.xlsx  sheet.names.xlsx  small.xlsx  stringColumns.xlsx  utils.test.js  with-headers.xlsx  ~$small.xlsx
